# synfection

./: .gitignore  Cargo.toml  LICENSE  README.md  dataset.py  demos.py  export_net.py  genpatches.py  loops.py  losses.py  match.py  model.py  my_groove.mid  reward.py  reward_mel.py  serve.py  synth.py  synth_v1.py  train.py  vary.py
.github/workflows/: ci.yml  release.yml
docs/: LAB.md
lab/: augment.py  demos.py  drumset.py  export_net.py  genpatches.py  loops.py  match.py  model.py  requirements.txt  synth.py  train.py
lab/rlhf/round03/: patches.jsonl  ratings.csv
lab/rlhf/round04/: index.html  patches.jsonl  ratings.csv
rlhf/round01/: index.html  patches.jsonl  ratings.csv
rlhf/round02/: patches.jsonl  ratings.csv
src/: dsp.rs  garden.rs  genome.rs  loops.rs  main.rs  matcher.rs  midiio.rs  net.rs  presets.rs  synth.rs  ui.rs  wavio.rs
tests/: parity.rs
weights/: parity.json
